--- a/src/index.scss
+++ b/src/index.scss
@@ -71,7 +71,15 @@ code {
 }
 .main-button,
 button.ant-btn-primary {
-  background-image: url(../public/image/components/button.png);
+  background: hsla(194, 94%, 50%, 1);
+
+  background: linear-gradient(
+    135deg,
+    hsla(194, 94%, 50%, 1) 0%,
+    hsla(215, 97%, 47%, 1) 94%,
+    hsla(215, 97%, 47%, 1) 100%
+  );
+
   border-radius: 6px;
   padding: 2px 10px;
   border: none;
@@ -82,7 +90,15 @@ button.ant-btn-primary {
   transition: all 0.2s ease-in-out;
   font-size: 22px;
   &:hover {
-    background-image: url(../public/image/components/button-hover.png);
+    background: hsla(21, 39%, 93%, 1);
+
+    background: linear-gradient(
+      90deg,
+      hsla(21, 39%, 93%, 1) 0%,
+      hsla(199, 83%, 84%, 1) 94%,
+      hsla(199, 83%, 84%, 1) 100%
+    );
+
     color: #57a6f0;
     filter: drop-shadow(0px 0px 2px #57a6f0);
   }
