--- a/src/pages/forum-page/style.scss
+++ b/src/pages/forum-page/style.scss
@@ -8,6 +8,10 @@
     gap: 8vmin;
     background-color: #cdc1ff;
     background-image: linear-gradient(316deg, #cdc1ff 0%, #e5d9f2 74%);
+    .forum-tool {
+        display: flex;
+        justify-content: space-between;
+    }
     .forum-sidebar-left {
         padding: 20px 30px 0px 30px;
         display: flex;
