--- a/src/pages/landing-page/style.scss
+++ b/src/pages/landing-page/style.scss
@@ -1,11 +1,11 @@
 .landing-page {
   width: 100vw;
-
+  background-color: #f2f2f2;
 
   .content {
     position: relative;
     width: 100vw;
-    background-image: url('../../../public/landing-page/PRYEAPFUHZBSNOD7VPGPCHC6IU.jpg');
+    background-image: url("../../../public/landing-page/PRYEAPFUHZBSNOD7VPGPCHC6IU.jpg");
     height: 560px;
     background-repeat: no-repeat;
     background-size: 100% 145%;
@@ -13,10 +13,10 @@
     overflow: hidden;
 
     &.introWeb {
-      background-image: url('https://uet.vnu.edu.vn/wp-content/uploads/2023/03/hb-lazada1.jpg');
+      background-image: url("https://uet.vnu.edu.vn/wp-content/uploads/2023/03/hb-lazada1.jpg");
     }
     &.intro-ai {
-      background-image: url('../../../public/landing-page/multiai.png');
+      background-image: url("../../../public/landing-page/multiai.png");
       .descript-overlay {
         background: none;
       }
@@ -111,6 +111,11 @@
   #name {
     color: white;
   }
+}
+.recent-research {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 2%;
 }
 .ld-btn {
   display: inline-block;
