--- a/src/pages/research/style.scss
+++ b/src/pages/research/style.scss
@@ -11,13 +11,6 @@
         height: 0;
     }
 
-    .approve-button {
-        position: absolute;
-        top: 20px;
-        right: 0;
-        display: flex;
-        gap: 20px;
-    }
     .page-navigator {
         height: fit-content;
         border-radius: 20px;
@@ -84,6 +77,39 @@
                 font-size: 18px;
                 line-height: 1.5;
             }
+        }
+    }
+}
+
+.research-modal {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    .research-modal-close {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        cursor: pointer;
+    }
+    .research-item {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        max-width: 960px;
+        background: white;
+        margin: auto;
+        position: relative;
+        top: 140px;
+        max-height: 80vh;
+        border-radius: 15px;
+        .research-body-content {
+            padding: 25px 30px;
+            overflow: auto;
         }
     }
 }
